addition of custom user movies
